@@ -1,91 +1,0 @@
-<h1>iceplayer - Music Player</h1>
-
-<ul>
-<li><strong>Author:</strong> gjp1120 &lt;<a href="&#x6D;a&#x69;&#108;&#116;&#111;:&#x67;&#106;&#112;&#x31;&#x31;&#50;0&#64;&#103;&#x6D;a&#105;l&#x2E;&#x63;&#x6F;&#x6D;">&#x67;&#106;&#112;&#x31;&#x31;&#50;0&#64;&#103;&#x6D;a&#105;l&#x2E;&#x63;&#x6F;&#x6D;</a>>, jasy.ice &lt;<a href="&#109;&#x61;&#105;&#108;&#116;&#x6F;:&#106;&#97;&#115;&#x79;.&#x69;&#x63;e&#64;&#103;&#x6D;&#x61;&#105;&#x6C;&#x2E;&#x63;&#111;&#x6D;">&#106;&#97;&#115;&#x79;.&#x69;&#x63;e&#64;&#103;&#x6D;&#x61;&#105;&#x6C;&#x2E;&#x63;&#111;&#x6D;</a>></li>
-<li><strong>Source:</strong> <a href="https://github.com/gjp1120/iceplayer">GitHub</a>, <a href="https://code.google.com/p/iceplayer">Google Code</a></li>
-<li><strong>Verison:</strong> 0.1</li>
-</ul>
-
-<h2>项目状态</h2>
-
-<p>工作中</p>
-
-<h2>介绍</h2>
-
-<p>因为<a href="https://code.google.com/p/iceplayer">原有的iceplayer</a> 是一个好项目，但现在为其增加功能时遇到了麻烦，因为原有代码耦合过度，难以从中分离部分有价值的代码，在这里的项目就是为解决这个问题而诞生的。</p>
-
-<p>在GitHub的这个项目仅是用于为iceplayer重构代码的，我们可能不会使用过多的原有代码。但会尽力提高iceplayer的可用性和效率。</p>
-
-<h2>代码要求</h2>
-
-<h3>编辑器</h3>
-
-<p>VIM:</p>
-
-<pre><code>tabstop = 4
-textwidth = 87
-expandtab
-</code></pre>
-
-<h3>代码风格</h3>
-
-<pre><code>BSD
-</code></pre>
-
-<h3>变量和内存</h3>
-
-<ul>
-<li>禁止全局变量，至少要用<code>static</code>修饰，为在其他文件中访问提供GET函数</li>
-<li>减少固定分配的数组</li>
-<li>认真管理内存</li>
-<li>保证类型转换正确</li>
-</ul>
-
-<h3>避免污染全局名称空间</h3>
-
-<ul>
-<li>标准宏名全部大写，伪装成函数的不遵循此要求</li>
-<li>仅内部使用的函数用static</li>
-</ul>
-
-<h3>可移植性</h3>
-
-<ul>
-<li>减少代码中警告</li>
-<li>尽力优化（但不能破坏可读性）</li>
-<li>使用标准的API报告错误，提供调试信息</li>
-</ul>
-
-<h3>头文件</h3>
-
-<ul>
-<li>每个文件开头都要有声明，包括GPL和文件功能</li>
-<li>每个头文件必须有保证只包含一次的宏</li>
-</ul>
-
-<p><code>
-    #ifndef __NAME_H</br>
-    #define __NAME_H</p>
-
-<pre><code>//...
-
-#endif /*__NAME_H*/
-</code></pre>
-
-<p></code></p>
-
-<h3>函数</h3>
-
-<ul>
-<li>复杂或有争议的代码要带有注释</li>
-<li>对外的函数要有说明，应放置于.h和.c中</li>
-<li>不要大批量使用<code>inline</code>（会增大调试难度）</li>
-<li>未实现和有问题的提供FIXME标记</li>
-</ul>
-
-<h3>国际化</h3>
-
-<ul>
-<li>尽量在代码中使用英文的字符串，例如<code>GtkLabel</code>中的字符串</li>
-<li>将每一个用户能看到的字符串使用<code>_()</code>或<code>N_()</code>[后者仅用于全局字符常量，例如UIManager所需的]</li>
-</ul>
