@@ -1,0 +1,6 @@
+#include "gui.h"
+
+gboolean iceplayer_ui_init(int *argc, char ***argv)
+{
+  gtk_init(argc, argv);
+}
