@@ -6,3 +6,7 @@ Sun Jul 22 22:47 <gjp1120@gmail.com>:
 
 Sun Jul 23 11:17 <gjp1120@gmail.com>:
 	更新DEVELOP文件
+
+Monday, July 23 2012 <gjp1120@gmail.com>:
+	从原有项目迁移部分代码
+	目前CMAKE未准备好
